-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: openjdk8u432
-
Component/s: hotspot
-
b06
-
b05
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8348292 | openjdk8u452 | Varada M | P2 | Resolved | Fixed | b01 |
| JDK-8360982 | shenandoah8u442 | Varada M | P2 | Resolved | Fixed | b05 |
Recent change causes compile error on AIX
10:19:02 "/home/jenkins/workspace/build-scripts/jobs/release/jobs/jdk8u/jdk8u-release-aix-ppc64-temurin/workspace/build/src/hotspot/src/share/vm/opto/superword.hpp", line 591.26: 1540-0219 (S) The call to "abs" has no best match.
Introduced by commit: https://github.com/openjdk/jdk8u/commit/0405894d5183be14e2563617446e90192eced09d
10:19:02 "/home/jenkins/workspace/build-scripts/jobs/release/jobs/jdk8u/jdk8u-release-aix-ppc64-temurin/workspace/build/src/hotspot/src/share/vm/opto/superword.hpp", line 591.26: 1540-0219 (S) The call to "abs" has no best match.
Introduced by commit: https://github.com/openjdk/jdk8u/commit/0405894d5183be14e2563617446e90192eced09d
- backported by
-
JDK-8348292 jdk8u432-b06 does not compile on AIX
-
- Resolved
-
-
JDK-8360982 jdk8u432-b06 does not compile on AIX
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk8u/1a6e3a5e
-
Review(master)
openjdk/jdk8u-dev/600
-
Review(master)
openjdk/jdk8u/65